After launch, found that logo2 was blurry on my phone, so this should fix it. Also got rid of a useless horizontal scroll bar.

--- a/custom.css
+++ b/custom.css
@@ -3,6 +3,8 @@ body {
   margin:0;
   padding:0;
   height:100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 #head {/*PostmodernPaul logo*/
@@ -22,6 +24,7 @@ body {
     margin-top: 50px;
 }
 #logo2 {/*Link image at bottom of pages*/
+  max-height:10vh;
   display: block;
   margin-left: auto;
   margin-right: auto
